# ptouch-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/share/zsh/site-functions/: _ptouch-template
src/ptouch_template/: cli.py  ptouch_template.py  template.py
tests/: test_ptouch_template.py
